--- a/style.css
+++ b/style.css
@@ -264,6 +264,13 @@ transition: .3s ease letter-spacing;
 /*---Projects Section--*/
 
 #projects {
+    background-image: url(./images/photo-1518655048521-f130df041f66.avif);
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+    z-index: 1;
+
+}
 
 }
 #projects .projects{
