--- a/style.css
+++ b/style.css
@@ -422,6 +422,35 @@ transition: .3s ease letter-spacing;
 
 /*-- end contact section--*/
 
+/*---demo section---*/
+#demo {
+    background-image: url(images/photo-1518655048521-f130df041f66.avif);
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+    z-index: 1;
+}
+#demo .demo{
+    flex-direction: column;
+    text-align: center;
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 100px 0;
+}
+#demo .section-title{
+    font-size: 4rem;
+    font-weight: 300;
+    color: black;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    text-align: top center;
+}
+
+
+/*--end demo section--*/
+
+
 
 
 
