--- a/style.css
+++ b/style.css
@@ -450,6 +450,16 @@ transition: .3s ease letter-spacing;
 
 /*--end demo section--*/
 
+/*--end demo section--*/
+
+/*footer section*/
+#footer-section{
+    padding: 1rem 0;
+    text-align: center;
+}
+
+/*end footer*/
+
 
 
 
